2009-08-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/debug.h: Fix typo.

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/__times.c, libfs/src/nfsclient/src/nfsTest.c,
	libfs/src/nfsclient/src/rpcio.c: Convert calls to legacy routine
	rtems_clock_get( RTEMS_CLOCK_GET_xxx, ..) to rtems_clock_get_xxx().

2009-08-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/heapresizeblock.c: Remove printk's that were accidentally
	committed.

2009-08-09	Xi Yang <hiyangxi@gmail.com>

	* libcsupport/Makefile.am, posix/Makefile.am, rtems/Makefile.am,
	sapi/Makefile.am, score/Makefile.am,
	score/include/rtems/score/heap.h: HEAP_BLOCK_USED_OVERHEAD was under
	by one uint32_t. This showed up in the unlimited and heapwalk tests
	on ARM targets.

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/objectextendinformation.c: Minor rework to eliminate
	uncovered ranges introduced by Chris' patch.

2009-08-06	Chris Johns <chrisj@rtems.org>

	* score/src/objectextendinformation.c: Ensure that nothing is moved or
	copied until all memory is successfully allocated.

2009-08-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/mqueuecreatesupp.c, posix/src/mqueuenametoid.c,
	posix/src/mqueueopen.c, posix/src/semaphorecreatesupp.c: Tinker with
	error handling for name too long. Use strnlen to ensure we do not run
	off the end of the maximum length string.

2009-08-06      Christian Mauderer <christian.mauderer@embedded-brains.de>

        * rtems/include/rtems/rtems/types.h: Improve documentation.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/bspcmdline/bspcmdline.h, libmisc/bspcmdline/bspcmdline_get.c,
	libmisc/bspcmdline/bspcmdline_getparam.c,
	libmisc/bspcmdline/bspcmdline_getparamraw.c,
	libmisc/bspcmdline/bspcmdline_getparamrhs.c: Add rtems_ as prefix to
	all routines.

2009-08-06	Chris Johns <chrisj@rtems.org>

	* libblock/src/bdbuf.c: Fix group user logic.