@@ -1,3 +1,10 @@
+2009-08-12	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* libcsupport/Makefile.am, libcsupport/preinstall.am,
+	posix/Makefile.am, posix/preinstall.am, rtems/Makefile.am,
+	rtems/preinstall.am, score/Makefile.am, score/preinstall.am: Revert
+	modifications accidentally committed.
+
 2009-08-11	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* score/include/rtems/debug.h: Fix typo.
